--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
     
+permissions:
+      id-token: write
+      contents: read
+    
 jobs:
   build:
     runs-on: ubuntu-latest
