--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
     - name: Clone Repo
       uses: actions/checkout@v3
-      
+
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1.7.0
       with:
-        role-to-assume: ${{secrets.AWS_ROLE}}
+        role-to-assume: arn:aws:iam::214084917052:role/githubactions
         role-session-name: GitHub_to_AWS_via_FederatedOIDC
         aws-region: ${{vars.AWS_REGION}}
 
