--- a/.github/workflows/ci-feature.yml
+++ b/.github/workflows/ci-feature.yml
@@ -6,4 +6,4 @@ on:
       - feature/**
 jobs:
   Test:
-    uses: hkaibara/CI-Workflows/.github/workflows/test.yml@main
+    uses: hkaibara/CI-Workflows/.github/workflows/testcode-python.yml@main
