--- a/.github/workflows/ci-feature.yml
+++ b/.github/workflows/ci-feature.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - name: echo nested vars
         run: |
-          echo ${{vars.TEST}}  naked
-          echo $${{vars.TEST}} nested
+          echo ::set-env name=STEPVAR::$${{vars.TEST}}
+          echo $STEPVAR
           
