--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,20 +3,21 @@ on:
   push:
     tags: 
       - 1*
-      - 2*
-      - 3*
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  check_branch:
+  Bump_version:
     runs-on: ubuntu-latest
     steps:
-      - name: Check branch
-        uses: actions/checkout@v3
-      - name: Tag commit
-        run: 
-          pwd
-          ls -al
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+  
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: false
