--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,13 +13,15 @@ permissions:
 jobs:
   Bump_version:
     runs-on: ubuntu-latest
-    environment: |-
-      ${{
-           github.ref_name == 'prod' && 'prod'
-        || github.ref_name == 'test' && 'test'
-        ||                              'feature'
-      }}
-        
+
+    environment: 
+      name: |-
+        ${{
+            github.ref_name == 'prod' && 'prod'
+          || github.ref_name == 'test' && 'test'
+          ||                              'feature'
+        }}
+
     steps:
       - uses: actions/checkout@v4
         with:
