--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: 'release'
 on:
   push:
-    tags: 
-      - 1*
     branches:
-      - feature/test
+      - feature/*
       - test
       - prod
 
@@ -16,13 +14,13 @@ jobs:
   Bump_version:
     runs-on: ubuntu-latest
 
-    environment: 
-      name: |-
-        ${{
-            github.ref_name == 'prod' && 'prod'
-          || github.ref_name == 'test' && 'test'
-          ||                              'feature'
-        }}
+    # environment: 
+    #   name: |-
+    #     ${{
+    #          github.ref_name == 'prod' && 'major'
+    #       || github.ref_name == 'test' && 'minor'
+    #       ||                              'patch'
+    #     }}
 
     steps:
       - uses: actions/checkout@v4
@@ -33,5 +31,10 @@ jobs:
         uses: anothrNick/github-tag-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: ${{vars.BUMP}}
+          DEFAULT_BUMP: |-
+            ${{
+                 github.event.label.name == 'Major' && 'major'
+              || github.ref_name == 'test' && 'minor'
+              ||                              'patch'
+            }}
           WITH_V: false
