--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
+          INITIAL_VERSION: 1.0.0
           DEFAULT_BUMP: |-
             ${{
                  github.event.label.name == 'Major' && 'major'
