--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
 name: 'release'
 on:
   pull_request:
-    types: [closed]
     branches:
       - test
       - prod
+    types: [closed]
 
 permissions:
   id-token: write
@@ -27,10 +27,10 @@ jobs:
           INITIAL_VERSION: 1.0.0
           DEFAULT_BUMP: |-
             ${{
-                 github.event.pull_request.labels.*.name == 'Major' && 'major'
-              || github.event.pull_request.labels.*.name == 'Minor' && 'minor'
-              || github.event.pull_request.labels.*.name == 'hotfix' && 'patch'
-              || github.event.pull_request.labels.*.name == 'patch' && 'patch'
+                 github.event.pull_request.labels.name == 'Major' && 'major'
+              || github.event.pull_request.labels.name == 'Minor' && 'minor'
+              || github.event.pull_request.labels.name == 'hotfix' && 'patch'
+              || github.event.pull_request.labels.name == 'patch' && 'patch'
               || 'none'
             }}
       - name: verbose
