--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,23 @@ permissions:
 jobs:
   Bump_version:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
+
+      - name: set-env
+        id: set-env
+
+        run: |
+          echo "label=${{
+                 github.event.pull_request.labels.name == 'Major' && 'major'
+              || github.event.pull_request.labels.name == 'Minor' && 'minor'
+              || github.event.pull_request.labels.name == 'hotfix' && 'patch'
+              || github.event.pull_request.labels.name == 'patch' && 'patch'
+              || 'none'
+            }}" >> "$GITHUB_OUTPUT"
   
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@v1
@@ -25,14 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: |-
-            ${{
-                 github.event.pull_request.labels.name == 'Major' && 'major'
-              || github.event.pull_request.labels.name == 'Minor' && 'minor'
-              || github.event.pull_request.labels.name == 'hotfix' && 'patch'
-              || github.event.pull_request.labels.name == 'patch' && 'patch'
-              || 'none'
-            }}
+          DEFAULT_BUMP: ${{steps.set-env.outputs.label}}
       - name: verbose
         run: |
           echo ${{steps.bump.outputs.new_tag}}
