--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
       - test
       - prod
     types: [closed]
+  # push:
+  #   branches:
+  #     - test
+  #     - prod
 
 permissions:
   id-token: write
@@ -19,17 +23,17 @@ jobs:
         with:
           fetch-depth: '0'
 
-      - name: set-env
-        id: set-env
+      # - name: set-env
+      #   id: set-env
 
-        run: |
-          echo "label=${{
-                 github.event.pull_request.labels.name == 'Major' && 'major'
-              || github.event.pull_request.labels.name == 'Minor' && 'minor'
-              || github.event.pull_request.labels.name == 'hotfix' && 'patch'
-              || github.event.pull_request.labels.name == 'patch' && 'patch'
-              || 'none'
-            }}" >> "$GITHUB_OUTPUT"
+      #   run: |
+      #     echo "label=${{
+      #            github.event.pull_request.labels.name == 'major' && 'major'
+      #         || github.event.pull_request.labels.name == 'Minor' && 'minor'
+      #         || github.event.pull_request.labels.name == 'hotfix' && 'patch'
+      #         || github.event.pull_request.labels.name == 'patch' && 'patch'
+      #         || 'none'
+      #       }}" >> "$GITHUB_OUTPUT"
   
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@v1
@@ -38,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: ${{steps.set-env.outputs.label}}
+          DEFAULT_BUMP: ${{github.event.pull_request.labels.name}}
       - name: verbose
         run: |
           echo ${{steps.bump.outputs.new_tag}}
