--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,13 +27,13 @@ jobs:
       - name: set-env
         id: set-env
         run: |
-          if "containts(github.event.head_commit.message, 'patch')"; then
+          if "contains(github.event.head_commit.message, 'patch')"; then
             echo "label=patch" >> "$GITHUB_OUTPUT"
-          elif "containts(github.event.head_commit.message, 'minor')"; then
+          elif "contains(github.event.head_commit.message, 'minor')"; then
             echo "label=minor" >> "$GITHUB_OUTPUT"
-          elif "containts(github.event.head_commit.message, 'major')"; then
+          elif "contains(github.event.head_commit.message, 'major')"; then
             echo "label=major" >> "$GITHUB_OUTPUT"
-          elif "containts(github.event.head_commit.message, 'hotfix')"; then
+          elif "contains(github.event.head_commit.message, 'hotfix')"; then
             echo "label=patch" >> "$GITHUB_OUTPUT"
           else
             echo "label=none" >> "$GITHUB_OUTPUT"
@@ -49,7 +49,7 @@ jobs:
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
           DEFAULT_BUMP: ${{steps.set-env.outputs.label}}
-          
+
       - name: verbose
         run: |
           echo ${{steps.bump.outputs.new_tag}}
