--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.pull_request.base.sha }}
   
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@v1
@@ -28,10 +28,10 @@ jobs:
           INITIAL_VERSION: 1.0.0
           DEFAULT_BUMP: |-
             ${{
-                 github.event.label.name == 'Major' && 'major'
-              || github.event.label.name == 'Minor' && 'minor'
-              || github.event.label.name == 'hotfix' && 'patch'
-              || github.event.label.name == 'patch' && 'patch'
+                 github.event.pull_request.labels.*.name == 'Major' && 'major'
+              || github.event.pull_request.labels.*.name == 'Minor' && 'minor'
+              || github.event.pull_request.labels.*.name == 'hotfix' && 'patch'
+              || github.event.pull_request.labels.*.name == 'patch' && 'patch'
               || 'none'
             }}
 
