--- a/.github/workflows/versioning-reusable.yml
+++ b/.github/workflows/versioning-reusable.yml
@@ -1,18 +1,16 @@
 name: 'Versioning'
 on:
-  # pull_request:
-  #   types: 
-  #    - closed
-  push:
-    branches:
-      - wala
-      
-permissions:
-  id-token: write
-  contents: write
+  workflow_call:
+      inputs:
+        bump:
+          type: string
+          required: true
+      secrets:
+        GITHUB_TOKEN:
+          required: true
 
 jobs:
-  Bump_version:
+  Versioning:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'test'
     runs-on: ubuntu-latest
 
@@ -29,14 +27,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: |-
-            ${{
-                 contains(github.event.pull_request.labels.*.name, 'Major')  && 'major'
-              || contains(github.event.pull_request.labels.*.name, 'Minor')  && 'minor'
-              || contains(github.event.pull_request.labels.*.name, 'Hotfix') && 'patch'
-              || contains(github.event.pull_request.labels.*.name, 'Patch')  && 'patch'
-              || 'none'
-            }}
+          DEFAULT_BUMP: ${{inputs.bump}}
 
   Release_Version:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'prod'
@@ -55,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: none
+          DEFAULT_BUMP: ${{inputs.bump}}
 
       - name: release tag
         id: release
