--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,15 +10,14 @@ permissions:
 
 jobs:
   Versioning:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: hkaibara/application-repo/.github/workflows/versioning-reusable.yml@main
-        with:
-          bump: |-
-            ${{
-                    contains(github.event.pull_request.labels.*.name, 'Major')  && 'major'
-                || contains(github.event.pull_request.labels.*.name, 'Minor')  && 'minor'
-                || contains(github.event.pull_request.labels.*.name, 'Hotfix') && 'patch'
-                || contains(github.event.pull_request.labels.*.name, 'Patch')  && 'patch'
-                || 'none'
-            }}
+
+    uses: hkaibara/application-repo/.github/workflows/versioning-reusable.yml@main
+    with:
+      bump: |-
+        ${{
+                contains(github.event.pull_request.labels.*.name, 'Major')  && 'major'
+            || contains(github.event.pull_request.labels.*.name, 'Minor')  && 'minor'
+            || contains(github.event.pull_request.labels.*.name, 'Hotfix') && 'patch'
+            || contains(github.event.pull_request.labels.*.name, 'Patch')  && 'patch'
+            || 'none'
+        }}  
