--- a/.github/workflows/versioning-reusable.yml
+++ b/.github/workflows/versioning-reusable.yml
@@ -1,13 +1,8 @@
 name: 'Versioning'
 on:
   workflow_call:
-      inputs:
-        bump:
-          type: string
-          required: true
-
 jobs:
-  Versioning:
+  Bump_Version:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'test'
     runs-on: ubuntu-latest
 
@@ -24,7 +19,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: ${{inputs.bump}}
+          DEFAULT_BUMP: |-
+            ${{
+                 contains(github.event.pull_request.labels.*.name, 'Major')  && 'major'
+              || contains(github.event.pull_request.labels.*.name, 'Minor')  && 'minor'
+              || contains(github.event.pull_request.labels.*.name, 'Hotfix') && 'patch'
+              || contains(github.event.pull_request.labels.*.name, 'Patch')  && 'patch'
+              || 'none'
+            }} 
 
   Release_Version:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'prod'
@@ -43,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: prod
           INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: ${{inputs.bump}}
+          DEFAULT_BUMP: none
 
       - name: release tag
         id: release
