--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,21 @@ jobs:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'prod'
     uses: hkaibara/CI-Workflows/.github/workflows/release.yml@main
     with:
-        runner: ubuntu-latest
-        checkout_ref: ${{github.event.pull_request.merge_commit_sha}}
+      runner: ubuntu-latest
+      checkout_ref: ${{github.event.pull_request.merge_commit_sha}}
+  
+  Verbose1:
+    runs-on: ubuntu-latest
+    needs: Tag
+    steps:
+      - name: Outputs
+        run: |
+          echo ${{needs.Tag.outputs.tag}}
+
+  Verbose2:
+    runs-on: ubuntu-latest
+    needs: Release
+    steps:
+      - name: Outputs
+        run: |
+          echo ${{needs.Release.outputs.tag}}
